burger on mobile fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -931,7 +931,7 @@ table tr:hover {
     .hamburger-btn,
     .fab,
     .bottom-nav {
-        display: flex;
+        display: flex !important;
     }
 
     .desktop-nav {
